# ai-report-wizard

./: README.md  pyproject.toml
docs/: ideas.md
notebooks/: 1.0-rad-test.ipynb  2.0-rad-test_agent.ipynb
