[tool.poetry]
name = "ai-report-wizard"
version = "0.1.0"
description = ""
authors = ["Alexey Rezvykh"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.16"
langchain-ollama = "^0.1.3"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
notebook = "^7.2.2"
langserve = {extras = ["all"], version = "^0.2.3"}
langchain-community = "^0.2.16"
langgraph = "^0.2.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
